fixed contrast

--- a/frontend/src/assets/styles/cmps/StationPreview.scss
+++ b/frontend/src/assets/styles/cmps/StationPreview.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   width: 220px;
   padding: 1rem 1rem 0.4rem;
-  background-color: rgba($clr4, 0.7);
+  background-color: rgba($clr7, 0.28);
   overflow: hidden;
   box-shadow: 0 4px 6px rgba($clr5, 0.1);
   cursor: pointer;
